--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/jwt": "^10.0.3",
     "@nestjs/mongoose": "^9.2.2",
+    "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "mongoose": "^6.2.2",
+    "passport": "^0.6.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
